--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #0f172a; /* Slate 900 */
-        color: #e2e8f0; /* Slate 200 */
+        background-color: #000000; /* Pure Black */
+        color: #e5e5e5; /* Neutral 200 */
       }
       /* Custom scrollbar */
       ::-webkit-scrollbar {
@@ -18,14 +18,14 @@
         height: 8px;
       }
       ::-webkit-scrollbar-track {
-        background: #1e293b; 
+        background: #0a0a0a; 
       }
       ::-webkit-scrollbar-thumb {
-        background: #475569; 
+        background: #404040; 
         border-radius: 4px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #64748b; 
+        background: #737373; 
       }
     </style>
   <script type="importmap">
